tests/snapshots/installer-screen__editor-assign.snap
---
source: src/tests/screens.rs
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 22 },
    content: [
        "  ✓  disk selection                                                             ",
        "     disk               size      filesystem    format  type   mount            ",
        "   > partition          68.7 GB   ext4                  linux  /                ",
        "                      ╭─ partition ──────────────────────╮                      ",
        "                      │> Assign                          │                      ",
        "                      │  Format                          │                      ",
        "                      │  Rename                          │                      ",
        "                      │  Delete                          │                      ",
        "                      │                                  │                      ",
        "                      │                                  │                      ",
        "                      │                                  │                      ",
        "                      │                                  │                      ",
        "                      │                                  │                      ",
        "                      │                                  │                      ",
        "                      │                                  │                      ",
        "                      │                                  │                      ",
        "                      │                                  │                      ",
        "                      │                                  │                      ",
        "                      ╰──────────────────────────────────╯                      ",
        "                                                                                ",
        "                                                                                ",
        "↑↓ navigate • ⏎  select • Esc back                                              ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 0, fg: Rgb(108, 224, 123), bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 72, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Rgb(238, 111, 248), bg: Reset, underline: Reset, modifier: BOLD,
        x: 22, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 32, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 34, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 46, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 48, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 54, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 56, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 61, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 2, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 72, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 3, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 3, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: BOLD,
        x: 34, y: 3, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 4, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 4, fg: Rgb(238, 111, 248), bg: Reset, underline: Reset, modifier: BOLD,
        x: 31, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 4, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 5, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 5, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 6, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 6, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 7, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 7, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 8, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 8, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 9, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 9, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 10, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 10, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 11, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 11, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 12, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 12, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 13, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 13, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 14, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 14, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 15, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 15, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 16, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 16, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 17, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 17, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 18, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 34, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
